--- a/velosparkapp/velosparkapp/templates/base.html
+++ b/velosparkapp/velosparkapp/templates/base.html
@@ -29,22 +29,22 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li {% if slug == 'contact' %}class="active"{% endif %}>
-                        <a href="{% url 'page' 'contact' %}">Contact</a>
+                    <li>
+                        <a href="{% url 'contact' %}">Contact</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                        <li {% if slug == 'logout' %}class="active"{% endif %}>
-                            <a href="{% url 'page' 'logout' %}">Logout</a>
+                        <li>
+                            <a href="{% url 'logout' %}">Logout</a>
                         </li>
-                        <li {% if slug == 'profile' %}class="active"{% endif %}>
-                            <a href="{% url 'page' 'profile' %}">
+                        <li>
+                            <a href="{% url 'profile' user.id %}">
                                 <span class="glyphicon glyphicon-user"></span>
                             </a>
                         </li>
                     {% else %}
-                        <li class="active">
+                        <li>
                             <a class="nav_connect_strava" href="{% url 'allaccess-login' 'strava' %}">
                                 <img src="{% static "images/nav_connect_strava.png" %}" alt="Connect With Strava"/>
                             </a>
