no dice on this way to do it but may make some progress elsewhere

--- a/findingepics_app/templates/index.html
+++ b/findingepics_app/templates/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <a href="/login">login</a>
+    <a href="/auth/login">login</a>
     <div class="mx-4">
         <p class="text-2x1 font-bold mb-4">Activity List</p>
 
